[package]
name = "wasmtime-continuations"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime-fibre = { workspace = true }
num_enum = "0.5"
memoffset = "0.9.0"
